--- a/app/assets/stylesheets/util.scss
+++ b/app/assets/stylesheets/util.scss
@@ -102,7 +102,7 @@
   padding: 24px;
   display: flex;
   justify-content: space-between;
-  max-width: 700px;
+  max-width: 680px;
   font-family: 'Fira Sans', Geneva, Arial, sans-serif;
   font-weight: 300;
   font-size: 13px;
